style(input): fix material jumping

--- a/src/components/input/themes/light/input.base.scss
+++ b/src/components/input/themes/light/input.base.scss
@@ -4,7 +4,6 @@
 %starfix {
     display: flex;
     align-items: center;
-    height: var(--size);
     color: color(gray, 700);
 }
 
